--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ fabric.properties
 
 # Package Files #
 amazon_products_sales_data_cleaned.csv
+amazon_products_sales_data_cleaned_filtered.csv
 .idea
 .vscode
 *.jar
