Adding configs and changes to application.properties and compose.yaml
I added the config fill as well the neccessary work inside, and changed application.properties and compose.yaml to have the info for the second database

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,15 @@ services:
       - 'MYSQL_USER=myuser'
     ports:
       - '3306'
+  mysqlUsers:
+    image: 'mysql:latest'
+    environment:
+      - 'MYSQL_DATABASE=userDatabase'
+      - 'MYSQL_PASSWORD=password'
+      - 'MYSQL_ROOT_PASSWORD=secretPassword'
+      - 'MYSQL_USER=thisUser'
+    ports:
+      - '3306'
+volumes:
+  mysql:
+  mysqlUsers:
