--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=gamingdepot
 
-server.port=${SERVER_PORT:8080}
+#DB1
+#server.port=${SERVER_PORT:8080}
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ProductData
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#DB2
+second.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/UserData
+second.datasource.password=${MYSQL_PASSWORD:root}
+second.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database-platform=org.hibernat.dialect.MySQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.fail-on-empty-beans=false
