Update: Made models and controllers and other files match main, getting ready to set up a second db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #DB2
 second.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/UserData
+second.datasource.username=${MYSQL_USER:root}
 second.datasource.password=${MYSQL_PASSWORD:root}
 second.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernat.dialect.MySQLDialect
+spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.fail-on-empty-beans=false
