--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_empty
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+logging.level.org.springframework=DEBUG
