--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,21 @@
 spring.application.name=gamingdepot
 
-#DB1
-#server.port=${SERVER_PORT:8080}
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ProductData
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Catalog DB (products)
+spring.datasource.catalog.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ProductData
+spring.datasource.catalog.username=${MYSQL_USER:root}
+spring.datasource.catalog.password=${MYSQL_PASSWORD:root}
+spring.datasource.catalog.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.catalog.maximum-pool-size=10
 
-#DB2
-second.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/UserData
-second.datasource.username=${MYSQL_USER:root}
-second.datasource.password=${MYSQL_PASSWORD:root}
-second.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Transactions / Users DB
+spring.datasource.transactions.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/UserData
+spring.datasource.transactions.username=${MYSQL_USER:root}
+spring.datasource.transactions.password=${MYSQL_PASSWORD:root}
+spring.datasource.transactions.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.transactions.maximum-pool-size=10
 
 spring.jpa.database-platform=org.hibernat.dialect.MySQLDialect
 spring.jackson.property-naming-strategy=SNAKE_CASE
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_empty
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 logging.level.org.springframework=DEBUG
