Refactor: User table now works with the second database, will add more functionality later

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gamingdepot
 
-# Catalog DB (products)
+# Catalog DB (product_id)
 spring.datasource.catalog.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ProductData
 spring.datasource.catalog.username=${MYSQL_USER:root}
 spring.datasource.catalog.password=${MYSQL_PASSWORD:root}
