Refactor: Adding functionality for login and registration, this is currently not working, but will be soon

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_empty
 logging.level.org.springframework=DEBUG
+jwt.secret=
