Refactor: Adding functionality for login and registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=gamingdepot
+spring.config.import=optional:file:.env[.properties]
 
 # Catalog DB (product_id)
 spring.datasource.catalog.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/ProductData
@@ -17,5 +18,5 @@ spring.datasource.transactions.maximum-pool-size=10
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.default-property-inclusion=non_empty
-logging.level.org.springframework=DEBUG
-jwt.secret=
+jwt.secret=${JWT_SECRET:}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
