--- a/.gitignore
+++ b/.gitignore
@@ -149,6 +149,7 @@ fabric.properties
 # Package Files #
 amazon_products_sales_data_cleaned.csv
 amazon_products_sales_data_cleaned_filtered.csv
+*.env
 .idea
 .vscode
 *.jar
